Make service names more concise Fix saving to config immediately upon altering global settings Hologram system setup. Warning cleanup.